resolve image clipping

--- a/stylesheet-v2.css
+++ b/stylesheet-v2.css
@@ -145,11 +145,11 @@ li.forcast:first-of-type {
 
 li.forcast:first-of-type div.time {
     font-size: 20pt;
-    width: 40%
+    width: 35%
 }
 
 li.forcast:first-of-type div.icon {
-    width: 30%;
+    width: 35%;
     height: 200px;
 }
 
@@ -174,13 +174,13 @@ footer div.time {
     float: left;
     height: 90px;
     line-height: 90px;
-    width: 40%;
+    width: 35%;
     text-align: left;
 }
 
 div.icon {
     overflow: hidden;
-    width: 30%;
+    width: 35%;
     float: left;
     height: 90px;
 }
